3.7.0 b681
Updated functions and methods to java 16 level